# async-architecture

./: .env  .gitignore  docker-compose.registry.yml  docker-compose.yml  tag.sh
analytics/: Dockerfile  Makefile  docker-compose.yml
analytics/src/: .env.dist
analytics/src/analytics/: urls.py
analytics/src/app/: authentication.py  settings.py
analytics/src/billing/: models.py  services.py
analytics/src/events/: consumer.py  handlers.py  producer.py  types.py
analytics/src/tracker/: models.py  services.py
analytics/src/users/: models.py  services.py  urls.py
auth/: Dockerfile  Makefile  docker-compose.yml  requirements.in  requirements.txt
auth/src/: .env.dist
auth/src/app/: authorization.py  (+2 more)
billing/: Dockerfile  Makefile  docker-compose.yml  requirements.in
billing/src/: .env.dist
frontend/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  svelte.config.js  svelte.config.prod.js
frontend/src/: app.d.ts  app.html  app.scss  auth.ts
homework/: week0.md  week1.md
kafka/: consumer_example.py  create_topics.py  docker-compose.yml  producer_example.py
popug_schema/: README.MD  pyproject.toml  setup.cfg
popug_schema/jirapopug/: __main__.py
popug_schema/jirapopug/schema/: json.py  message.py  topics.py  versions.py
popug_schema/jirapopug/schema/account/: __init__.py  v1.py
popug_schema/jirapopug/schema/billing/: __init__.py  v1.py
popug_schema/jirapopug/schema/task/: __init__.py  v1.py  v2.py
tracker/: Dockerfile  Makefile  docker-compose.yml  requirements.in  requirements.txt
tracker/src/: .env.dist
(+139 files in other folders)
