[metadata]
name = jirapopug
description = PopugJira schema registry
long_description = file: README.MD
author = Igor Ostanin
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
packages =
    jirapopug
install_requires =
    pydantic==2.6.3
python_requires = >= 3.12
package_dir =
    =.
zip_safe = no


[options.package_data]
jirapopug = py.typed
